# CeleMod

./: .gitignore  .gitmodules  Cargo.toml  Linux.md  README.en.md  README.md  build.rs  clippy-fix.bat  linux_install.sh  mod-cache.yaml
.claude/: settings.local.json
.github/workflows/: rust.yml
resources/: dist.rc  icon.icns  inspector
sciter/: packfolder-mac
src/: aria2c.rs  blacklist.rs  constants.rs  everest.rs  main.rs  test.html  ureq.rs  wegfan.rs
src/celemod-ui/: .gitignore  README.md  build.js  debug_index.html  di18n.config.js  package.json  tsconfig.json
src/celemod-ui/locales/: de-DE.json  en-US.json  fr-FR.json  pt-BR.json  ru-RU.json  zh-CN.json
src/celemod-ui/src/: App.tsx  i18n.ts  i2.css  index.html  index.scss  index.tsx  index_windows.html  sanitizeDescriptionHtml.ts  sciter-specific.js  states.ts  utils.ts
src/celemod-ui/src/api/: wegfan.ts  xmao.ts
src/celemod-ui/src/components/: Button.scss  Button.tsx  DownloadList.scss  DownloadList.tsx  EnforceEverestPage.tsx  GameSelector.scss  GameSelector.tsx  Icon.tsx  ModList.scss  ModList.tsx  Popup.tsx  Progress.tsx  SelfUpdate.scss  SelfUpdate.tsx  all.ts
src/celemod-ui/src/context/: blacklist.ts  download.ts  everest.ts  modManage.ts  modManage.tsx  theme.ts
src/celemod-ui/src/ipc/: blacklist.ts
src/celemod-ui/src/resources/: RecommendModData.ts
src/celemod-ui/src/routes/: Everest.scss  Everest.tsx  Home.scss  Home.tsx  Manage.scss  Manage.tsx  Multiplayer.tsx  RecommendMaps.scss  RecommendMaps.tsx  RecommendMods.scss  RecommendMods.tsx  Search.scss  Search.tsx
src/celemod-ui/src/types/: resources.d.ts  sciter.d
src/ui2/src/: hot-reload.ts
