[package]
name = "cele-mod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sciter-rs = "*"
game-scanner = "1.1.4"
lazy_static = "1.4.0"
anyhow = "*"
zip = "0.6.6"
serde_yaml = "0.9.25"
serde_json = "1.0.104"
minreq = { version = "*", features = ["https"] }
strip_bom = "1.0.0"