[package]
name = "cele-mod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sciter-rs = "*"
game-scanner = { git = "https://github.com/EqualGames/game-scanner", branch = "dependabot/cargo/sysinfo-0.28.2" }
lazy_static = "*"
anyhow = "*"
zip = "*"
serde = "*"
serde_yaml = "0.9.25"
serde_json = "1.0.104"
ureq = { version = "*", features = ["json", "gzip", "tls"] }
strip_bom = "1.0.0"
open = "*"
include-bytes-zstd = "*"